# BUILD.bazel
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image")


gazelle(name = "gazelle")

go_library(
    name = "compilerapi_lib",
    srcs = ["compilerapi.go"],
    importpath = "github.com/dan-stowell/compilerapi",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "compilerapi",
    embed = [":compilerapi_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "compilerapi_tar",
    srcs = [":compilerapi"],
)

oci_image(
    name = "compilerapi_image",
    base = "@distroless_base",
    tars = [":compilerapi_tar"],
    entrypoint = ["/compilerapi"],
)
